--- a/Escc.ClientDependencyFramework/Escc.ClientDependencyFramework.csproj
+++ b/Escc.ClientDependencyFramework/Escc.ClientDependencyFramework.csproj
@@ -49,6 +49,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="ClientDependency.config.install.xdt" />
+    <None Include="ClientDependency.config.uninstall.xdt" />
     <None Include="Web.config.uninstall.xdt" />
   </ItemGroup>
   <ItemGroup>
