Restructure so that it works when added to apps

--- a/Escc.ClientDependencyFramework/Escc.ClientDependencyFramework.csproj
+++ b/Escc.ClientDependencyFramework/Escc.ClientDependencyFramework.csproj
@@ -30,8 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ClientDependency.Core">
-      <HintPath>..\packages\ClientDependency.1.8.0.0\lib\net45\ClientDependency.Core.dll</HintPath>
+    <Reference Include="ClientDependency.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ClientDependency.2.0.0.0\lib\net45\ClientDependency.Core.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -43,14 +44,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClientDependencySection.cs" />
     <Compile Include="PolyfillMediaQueryRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
     <None Include="ClientDependency.config.install.xdt" />
     <None Include="ClientDependency.config.uninstall.xdt" />
+    <None Include="packages.config" />
     <None Include="Web.config.uninstall.xdt" />
   </ItemGroup>
   <ItemGroup>
