Fix config transform bug when installing over Umbraco

--- a/Escc.ClientDependencyFramework/Escc.ClientDependencyFramework.csproj
+++ b/Escc.ClientDependencyFramework/Escc.ClientDependencyFramework.csproj
@@ -55,13 +55,18 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ClientDependency.config.install.xdt" />
-    <None Include="ClientDependency.config.uninstall.xdt" />
+    <None Include="Umbraco\ClientDependency.config.install.xdt" />
+    <None Include="Umbraco\ClientDependency.config.uninstall.xdt" />
     <None Include="packages.config" />
+    <None Include="Umbraco\Web.config.install.xdt">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Web.config.uninstall.xdt" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Web.config.install.xdt" />
+    <None Include="Web.config.install.xdt">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <CodeAnalysisDictionary Include="CustomDictionary.xml" />
