Remove the dependency on ClientDependency and NuBuild

--- a/Escc.ClientDependencyFramework.WebForms/Escc.ClientDependencyFramework.WebForms.csproj
+++ b/Escc.ClientDependencyFramework.WebForms/Escc.ClientDependencyFramework.WebForms.csproj
@@ -32,6 +32,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\Escc.ClientDependencyFramework.WebForms.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>true</SignAssembly>
@@ -62,10 +63,15 @@
     <Compile Include="Script.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="build-nuget.cmd" />
+    <None Include="Escc.ClientDependencyFramework.WebForms.nuspec" />
     <None Include="packages.config" />
     <None Include="Web.config.transform" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>if "$(ConfigurationName)"=="Release" "$(ProjectDir)build-nuget.cmd" $(ProjectDir)</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
